// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin User List Item component will render correctly for user with full profile 1`] = `
"<li class="flex flex-row mt-2 gap-4">
  <!-- Avatar -->
  <div class="w-10 flex-initial mt-4"><img class="rounded-full" width="32px" height="32px" alt="" src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/601.jpg"></div><!-- Info Panel -->
  <div class="grow">
    <div class="text-xl font-bold font-title"><button class="text-link hover:text-link-hover pt-2 pb-2 mt-1 mb-1 text-sm m-0 p-0" data-testid="userslist-link-e7fdcf40-509e-49f1-85d2-24f35b0afe28" type="button">
        <!--v-if--><span class="text-xl font-bold">Abel_Koss49</span>
      </button><span class="ml-3">Abel Koss</span></div>
    <div class="flex flex-row">
      <div class="grow">
        <!-- Email -->
        <p><a class="font-bold text-link underline hover:text-link-hover" href="mailto:Abel5@yahoo.com"><span class="mr-1"><i class="fas fa-envelope fa-xs"></i></span><span>Abel5@yahoo.com</span></a></p><!-- Location -->
        <p><span class="mr-1"><i class="fas fa-map-marker-alt fa-xs"></i></span><span>Hamillside, CO, AZ</span></p><!-- Member since -->
        <p><span class="mr-1"><i class="fas fa-calendar-alt fa-xs"></i></span><span> Joined 6 years ago</span></p>
      </div>
      <div class="grid grid-cols-2"><label class="text-right font-bold mr-2">Status:</label><span class="text-success">active</span><label class="text-right font-bold mr-2">Role:</label><span>user</span><label class="text-right font-bold mr-2">Password:</label><span>set</span></div>
    </div>
  </div>
</li>"
`;

exports[`Admin User List Item component will render correctly for user with minimal profile 1`] = `
"<li class="flex flex-row mt-2 gap-4">
  <!-- Avatar -->
  <div class="w-10 flex-initial mt-4"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Adolf19"></div><!-- Info Panel -->
  <div class="grow">
    <div class="text-xl font-bold font-title"><button class="text-link hover:text-link-hover pt-2 pb-2 mt-1 mb-1 text-sm m-0 p-0" data-testid="userslist-link-8772f482-8bc1-4ae2-ab15-e0d4d741878d" type="button">
        <!--v-if--><span class="text-xl font-bold">Adolf19</span>
      </button>
      <!--v-if-->
    </div>
    <div class="flex flex-row">
      <div class="grow">
        <!-- Email -->
        <p><a class="font-bold text-link underline hover:text-link-hover" href="mailto:Adolf.DAmore33@hotmail.com"><span class="mr-1"><i class="fas fa-envelope fa-xs"></i></span><span>Adolf.DAmore33@hotmail.com</span></a></p><!-- Location -->
        <!--v-if-->
        <!-- Member since -->
        <p><span class="mr-1"><i class="fas fa-calendar-alt fa-xs"></i></span><span> Joined 2 years ago</span></p>
      </div>
      <div class="grid grid-cols-2"><label class="text-right font-bold mr-2">Status:</label><span class="text-success">active</span><label class="text-right font-bold mr-2">Role:</label><span>user</span><label class="text-right font-bold mr-2">Password:</label><span>set</span></div>
    </div>
  </div>
</li>"
`;
